<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/onbaordingGroup">

        <item
            android:id="@+id/onboarding_card_generator"
            android:icon="@drawable/ic_onboarding"
            android:title="@string/generate_onboarding" />

    </group>

    <group
        android:id="@+id/aboutGroup">

        <item
            android:id="@+id/about_card_generator"
            android:icon="@drawable/ic_waves"
            android:title="@string/generate_about" />

    </group>

    <group
        android:id="@+id/mailGroup">

        <item
            android:id="@+id/support_mail"
            android:icon="@drawable/ic_mail"
            android:title="@string/support_mail" />

    </group>

    <group
        android:id="@+id/devConsole_group">

        <item
            android:id="@+id/devConsole"
            android:icon="@drawable/ic_disk_full"
            android:title="@string/dev_console"
            android:visible="false"/>

    </group>

</menu>