<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/placeCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:background="@drawable/ripple"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/sushiImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:padding="16dp"
            android:src="@drawable/sushi" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/sushiImage"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/onboarding_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/onboardingIntroTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sushiImage"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/oboarding_intro" />

        <TextView
            android:id="@+id/onboardingBodyTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/onboardingIntroTextView"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            android:textColor="@color/colorSecondaryText"
            android:text="@string/onboarding_body" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/onboardingBodyTextView"
            android:layout_marginEnd="16dp"
            android:paddingBottom="8dp"
            android:src="@drawable/rocket" />

        <TextView
            android:id="@+id/gotitTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:padding="16dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:text="@string/onboarding_gotit"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>