<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/placeCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:background="@drawable/ripple"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="8dp">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/aboutIntroTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="16dp"
        android:text="@string/about_intro"/>

    <ImageView
        android:id="@+id/vRocketImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutIntroTextView"
        android:paddingTop="16dp"
        android:layout_marginStart="8dp"
        android:paddingBottom="8dp"
        android:layout_alignParentStart="true"
        android:src="@drawable/vertical_rocket"/>

    <TextView
        android:id="@+id/aboutBodyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutIntroTextView"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/vRocketImageView"
        android:paddingTop="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/about_body"/>

    <TextView
        android:id="@+id/gotitTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/aboutBodyTextView"
        android:layout_alignParentStart="true"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:text="@string/onboarding_gotit"/>

</RelativeLayout>
    </android.support.v7.widget.CardView>